removed phone number from contact form

--- a/public/index.html
+++ b/public/index.html
@@ -332,11 +332,11 @@
             <input type="text" name="name" id="name" required>
             <label for="email">Email Address</label>
             <input type="email" name="email" id="email" required>
-            <label for="number">Phone Number</label>
-            <input type="tel" id="number" name="number">
+            <!-- <label for="number">Phone Number</label>
+            <input type="tel" id="number" name="number"> -->
             <label for="course">Subject</label>
             <div class="select-wrapper">
-              <select name="course" id="course" required>
+              <select name="course" id="course">
                 <option value="" disabled selected>Courses</option>
                 <option value="act">ACT Test Prep</option>
                 <option value="ap">AP Exam Prep</option>
