failed card charge bug

--- a/public/act-invoice.html
+++ b/public/act-invoice.html
@@ -20,6 +20,7 @@
   <script src="https://js.stripe.com/v3/" defer></script>
 
   <link rel="stylesheet" href="act-invoice.css">
+  <link rel="stylesheet" href="Site Templates/site-wide.css">
   <script src="Site Templates/site-wide.js"></script>
   <script src="Site Templates/generalFunctions.js"></script>
   <script src="act-invoice.js" defer></script>
