a bunch of stuff

--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -329,6 +329,7 @@
         <div class="close" onclick="document.getElementById('navigationSection').style.display = 'none'">X</div>
         <h4 style="margin: 0;">What would you like to see?</h4>
         <button id="actNav" class="button">ACT</button>
+        <button id="testTakerNav" class="button">Test Taker</button>
         <!-- <button id="subjectTutoringNav" class="button">Subject Tutoring</button> -->
         <!-- <button id="mathProgramNav" class="button">Math Program</button>
         <button id="phonicsProgramNav" class="button">Phonics Program</button> -->
