--- a/public/guarantee.html
+++ b/public/guarantee.html
@@ -32,22 +32,22 @@
       <tr>
         <td>ACT Basics</td>
         <td>6 weeks</td>
-        <td>1 point</td>
+        <td>1 point (up to a 34)</td>
       </tr>
       <tr>
         <td>ACT Basics</td>
         <td>8 weeks</td>
-        <td>2 point</td>
+        <td>2 points (up to a 34)</td>
       </tr>
       <tr>
         <td>Guided ACT</td>
         <td>6 weeks</td>
-        <td>3 point</td>
+        <td>3 points (up to a 34)</td>
       </tr>
       <tr>
         <td>Guided ACT</td>
         <td>8 weeks</td>
-        <td>4 point</td>
+        <td>4 points (up to a 34)</td>
       </tr>
       <tr>
         <td>Custom Program</td>
@@ -79,6 +79,11 @@
     after your official test date. If you registered for an official test that was to be administered within the required time frame but it was canceled, 
     you must take the next official test that is available (unless the next official test available to you is more than 90 days after your last tutoring session, 
     in which case you will need to contact us for assistance). 
+  </p>
+
+  <h2>Cheating</h2>
+  <p>
+    If we have reason to believe you cheated on the initial practice test, we will present this evidence to you and deny your guarantee.
   </p>
 
   <h2>If you do not reach the guaranteed score increase</h2>
