--- a/public/test-taker.html
+++ b/public/test-taker.html
@@ -45,6 +45,7 @@
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
   <script src="Site Templates/generalFunctions.js"></script>
+  <script src="Site Templates/site-wide.js"></script>
   <script src="test-taker.js" defer></script>
 
 </head>
