test taker stuff

--- a/public/pricing.html
+++ b/public/pricing.html
@@ -129,7 +129,20 @@
 
       <section class="course-section" id="act">
         <h1>ACT Prep Courses</h1>
-        <h2><a href="guarantee.html">Guaranteed</a> point increases for all of our programs</h2>
+        <h2><a href="guarantee.html">Guaranteed</a>* point increases for all of our programs</h2>
+
+        <div class="practice-test-wrapper">
+          <h2>Free full length ACT practice test</h2>
+          <p>Not sure how many points you need to go up? Take a <strong>free</strong> full length ACT test and get your results back immediately.</p>
+          <div class="flex-row">
+            <input type="email" placeholder="email">
+            <button>Submit</button>
+          </div>
+          <p class="error"></p>
+          <div class="footnotes">
+            <p>By clicking 'Submit' you agree to our <a href="terms.html">terms of use</a></p>
+          </div>
+        </div>
 
         <input type="checkbox" id="paymentType">
         <div class="payment-type">
@@ -144,13 +157,13 @@
             <div class="title">
               <h3>1 point</h3>
               <h4 class="recurring">$900</h4>
-              <p class="recurring">10 payments of $75 and a $150 deposit*</p>
+              <p class="recurring">10 payments of $75 and a $150 deposit**</p>
               <h4 class="one-time">$810</h4>
-              <p class="one-time"><strong>Save $90</strong> includes $135 deposit*</p>
+              <p class="one-time"><strong>Save $90</strong> includes $135 deposit**</p>
             </div>
             <div class="length">
               <h4>ACT Basics</h4>
-              <h5>6 weeks</h5>
+              <h5>12 hours</h5>
             </div>
             <ul>
               <li><strong>One-on-One</strong> Personalized Tutoring</li>
@@ -177,13 +190,13 @@
             <div class="title">
               <h3>2 points</h3>
               <h4 class="recurring">$1200</h4>
-              <p class="recurring">14 payments of $75 and a $150 deposit*</p>
+              <p class="recurring">14 payments of $75 and a $150 deposit**</p>
               <h4 class="one-time">$1080</h4>
-              <p class="one-time"><strong>Save $120</strong> includes $135 deposit*</p>
+              <p class="one-time"><strong>Save $120</strong> includes $135 deposit**</p>
             </div>
             <div class="length">
               <h4>ACT Basics</h4>
-              <h5>8 weeks</h5>
+              <h5>16 hours</h5>
             </div>
             <ul>
               <li><strong>One-on-One</strong> Personalized Tutoring</li>
@@ -210,13 +223,13 @@
             <div class="title">
               <h3>3 points</h3>
               <h4 class="recurring">$1800</h4>
-              <p class="recurring">10 payments of $150 and a $300 deposit*</p>
+              <p class="recurring">10 payments of $150 and a $300 deposit**</p>
               <h4 class="one-time">$1620</h4>
-              <p class="one-time"><strong>Save $180</strong> includes $270 deposit*</p>
+              <p class="one-time"><strong>Save $180</strong> includes $270 deposit**</p>
             </div>
             <div class="length">
               <h4>Guided ACT</h4>
-              <h5>6 weeks</h5>
+              <h5>24 hours</h5>
             </div>
             <ul>
               <li><strong>One-on-One</strong> Personalized Tutoring</li>
@@ -245,13 +258,13 @@
             <div class="title">
               <h3>4 points</h3>
               <h4 class="recurring">$2400</h4>
-              <p class="recurring">14 payments of $150 and a $300 deposit*</p>
+              <p class="recurring">14 payments of $150 and a $300 deposit**</p>
               <h4 class="one-time">$2160</h4>
-              <p class="one-time"><strong>Save $240</strong> includes $270 deposit*</p>
+              <p class="one-time"><strong>Save $240</strong> includes $270 deposit**</p>
             </div>
             <div class="length">
               <h4>Guided ACT</h4>
-              <h5>8 weeks</h5>
+              <h5>32 hours</h5>
             </div>
             <ul>
               <li><strong>One-on-One</strong> Personalized Tutoring</li>
@@ -292,8 +305,12 @@
           </div>
         </div>
         <div class="footnotes">
-          <p>* All payment types will include a nonrefundable deposit which will be used to pay the amount due for the last two lessons.
-            If a program is cancelled per our <a href="cancellation.html">cancellation policy</a>, the deposit amount will not be refunded.</p>
+          <p>
+            * See our <a href="guarantee.html">guarantee policy</a>.
+          </p>
+          <p>** All payment types will include a nonrefundable deposit which will be used to pay the amount due for the last two lessons.
+            If a program is cancelled per our <a href="cancellation.html">cancellation policy</a>, the deposit amount will not be refunded.
+          </p>
         </div>
       </section>
 
