--- a/public/test-taker.html
+++ b/public/test-taker.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="https://use.typekit.net/ibd0auf.css">
-  <link rel="stylesheet" href="Site templates/site-wide.css">
+  <link rel="stylesheet" href="Site Templates/site-wide.css">
   <link rel="stylesheet" href="test-taker.css">
 
   <title>Test Taker</title>
@@ -231,6 +231,7 @@
         <div class="circle"><div class="left-arrow"></div></div>
         <h1>Previous</h1>
       </div>
+      <div class="nav" id="exitReview" onclick="exitReviewCallback()">Exit Review</div>
       <div class="nav" id="nextBtn" onclick="nextQuestionCallback()">
         <h1>Next</h1>
         <div class="circle"><div class="right-arrow"></div></div>
