--- a/public/pricing.html
+++ b/public/pricing.html
@@ -128,8 +128,9 @@
       </section>
 
       <section class="course-section" id="act">
-        <h1>ACT Prep Courses</h1>
-        <h2><a href="guarantee.html">Guaranteed</a>* point increases for all of our programs</h2>
+        <div class="heading">
+          <h1>ACT Prep Courses</h1>
+        </div>
 
         <div class="practice-test-wrapper">
           <h2>Free full length ACT practice test</h2>
@@ -144,16 +145,19 @@
           </div>
         </div>
 
+        <h2>Choose a program that helps you reach your goals</h2>
+        <h4>Guaranteed* point increases for all of our programs</h4>
+
         <input type="checkbox" id="paymentType">
         <div class="payment-type">
           <p class="scheduled">Pay each lesson</p>
           <label for="paymentType"></label>
-          <p class="one-time">Pay all up front (10% off)</p>
+          <p class="one-time">Pay up front (10% off)</p>
         </div>
         
         <div class="plans">
           <!-- Basics 6 weeks -->
-          <div class="plan-wrapper">
+          <!-- <div class="plan-wrapper">
             <div class="title">
               <h3>1 point</h3>
               <h4 class="recurring">$900</h4>
@@ -182,17 +186,17 @@
                 <p>(385) 300-0906</p>
               </a>
             </div>
-          </div>
+          </div> -->
 
           <!-- Basics 8 weeks -->
 
-          <div class="plan-wrapper">
+          <div class="plan-wrapper coming-soon" data-comingSoon="Save $120">
             <div class="title">
               <h3>2 points</h3>
               <h4 class="recurring">$1200</h4>
               <p class="recurring">14 payments of $75 and a $150 deposit**</p>
               <h4 class="one-time">$1080</h4>
-              <p class="one-time"><strong>Save $120</strong> includes $135 deposit**</p>
+              <p class="one-time">1 payment of $1080 which includes a $135 deposit**</p>
             </div>
             <div class="length">
               <h4>ACT Basics</h4>
@@ -219,13 +223,13 @@
 
           <!-- Guided 6 weeks -->
 
-          <div class="plan-wrapper">
+          <div class="plan-wrapper coming-soon" data-comingSoon="Save $180">
             <div class="title">
               <h3>3 points</h3>
               <h4 class="recurring">$1800</h4>
               <p class="recurring">10 payments of $150 and a $300 deposit**</p>
               <h4 class="one-time">$1620</h4>
-              <p class="one-time"><strong>Save $180</strong> includes $270 deposit**</p>
+              <p class="one-time">1 payment of $1620 which includes a $270 deposit**</p>
             </div>
             <div class="length">
               <h4>Guided ACT</h4>
@@ -254,13 +258,13 @@
 
           <!-- Guided 8 weeks -->
 
-          <div class="plan-wrapper">
+          <div class="plan-wrapper coming-soon" data-comingSoon="Save $240">
             <div class="title">
               <h3>4 points</h3>
               <h4 class="recurring">$2400</h4>
               <p class="recurring">14 payments of $150 and a $300 deposit**</p>
               <h4 class="one-time">$2160</h4>
-              <p class="one-time"><strong>Save $240</strong> includes $270 deposit**</p>
+              <p class="one-time">1 payment of $2160 which includes a $270 deposit**</p>
             </div>
             <div class="length">
               <h4>Guided ACT</h4>
@@ -291,10 +295,10 @@
         <div class="plan-wrapper custom">
           <div class="title">
             <h3>Customized programs</h3>
-            <h4>Want a more custom program? We would love to help get you started at no additional cost.</h4>
+            <!-- <h4>?</h4> -->
           </div>
           <div class="length">
-            <h5>Give us a call or text if you have any questions about our programs</h5>
+            <h5>Create a completely customized program to meet your student's needs.</h5>
           </div>
           <h4 class="start">GET STARTED TODAY!</h4>
           <div class="select">
@@ -315,7 +319,13 @@
       </section>
 
       <section class="course-section" id="subjectTutoring">
-        <h1>Subject Tutoring</h1>
+        <div class="heading">
+          <h1>Subject Tutoring</h1>
+        </div>
+
+        <h2>Stuck on a homework assignment or preparing for a test?</h2>
+        <h4>Whatever help you need in your class, we have a tutor that can help</h4>
+
         <div class="plans">
           <div class="plan-wrapper">
             <div class="title">
