--- a/public/test-taker.html
+++ b/public/test-taker.html
@@ -231,7 +231,7 @@
         <div class="circle"><div class="left-arrow"></div></div>
         <h1>Previous</h1>
       </div>
-      <div class="nav" id="exitReview" onclick="exitReviewCallback()">Exit Review</div>
+      <div class="nav button" id="exitReview" onclick="exitReviewCallback()">Exit Review</div>
       <div class="nav" id="nextBtn" onclick="nextQuestionCallback()">
         <h1>Next</h1>
         <div class="circle"><div class="right-arrow"></div></div>
