--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,7 @@
         <div class="hero__intro">
           <h1>Simple Online Tutoring</h1>
           <h4>ACT Prep and Subject Tutoring with <a href="why.html">Adaptive Learning Intelligence</a></h4>
-          <div><a class="hero__button" href="pricing.html">See our pricing</a></div>
+          <div><a class="hero__button" href="pricing.html">FREE ACT Practice Test</a></div>
         </div>
         <!-- <div class="hero__body">
             <img src="Images/Lyrn_hero_section_image.png" alt="Adaptive Learning in action">
