--- a/public/Dashboard/Dev.html
+++ b/public/Dashboard/Dev.html
@@ -68,6 +68,19 @@
     </div>
 
     <div>
+      <table id="leads-table" class="display compact cell-border">
+        <thead>
+          <tr>
+            <th>Email</th>
+            <th>Time</th>
+            <th>Page</th>
+            <th>Type</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
+
+    <div>
       <table id="error-table" class="display compact cell-border">
         <thead>
           <tr>
