--- a/public/pricing.html
+++ b/public/pricing.html
@@ -393,15 +393,11 @@
             <li><a href="terms.html">Terms and Conditions</a></li>
           </ul>
         </div>
-        <!-- <div>
+        <div>
           <h3>Social</h3>
-          <ul>
-            <li><a href="">Instagram</a></li>
-            <li><a href="">Facebook</a></li>
-            <li><a href="">LinkedIn</a></li>
-            <li><a href="">TikTok</a></li>
-          </ul>
-        </div> -->
+          <a href="https://www.instagram.com/lyrntutoring" target="_blank"><img src="Images/instagram.png" alt="instagram"></a></li>
+          <a href="https://www.facebook.com/LyrnTutoring" target="_blank"><img src="Images/facebook.png" alt="facebook"></a></li>
+        </div>
         <div>
           <h3>Contact Us</h3>
           <ul>
