--- a/email-templates/promo.html
+++ b/email-templates/promo.html
@@ -1,33 +1,9 @@
-<style>
-  @import url('https://fonts.googleapis.com/css?family=Work+Sans:300,600&display=swap');
-
-
-  body {
-    font-family: "proxima-nova", sans-serif;
-  }
-
-  .promo {
-    font-size: 2em;
-    color: #27c03a;
-  }
-
-  .footer {
-    color: #99ACC2;
-  }
-
-  .footer > a {
-    font-size: 12px;
-    color: #99ACC2;
-    margin-right: 1em;
-  }
-
-  .footer > p {
-    font-size: 12px;
-    color: #99ACC2;
-  }
-</style>
-
-<body>
+<head>
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Work+Sans:300,600&display=swap');
+  </style>
+</head>
+<body style="font-family: 'proxima-nova', sans-serif;">
   <div id="email" style="width:600px;margin: auto;background:white;">
 
     <table role="presentation" border="0" width="100%" cellspacing="0">
@@ -41,7 +17,7 @@
     <table role="presentation" border="0" width="100%" cellspacing="0">
       <tr>
         <td style="padding: 30px 30px 30px 60px;">
-          <h2 style="font-size: 28px; margin:0 0 20px 0;">ACT Practice Test</h2>
+          <h2 style="font-size: 28px; margin:0 0 20px 0;">Promo Code</h2>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
             Please let us know if you have any questions and we would love to help you reach your academic goals.
             To help you get started mention this promo code to get your first session free when signing up for an ACT program.
@@ -50,7 +26,7 @@
       </tr>
       <tr>
         <td align="center">
-          <h3 class="promo">FIRST ACT</h3>
+          <h3 style="font-size: 2em; color: #27c03a;">FIRST ACT</h3>
         </td>
       </tr>
     </table>
@@ -60,12 +36,12 @@
         <td style="vertical-align: top;padding: 30px 10px 30px 60px;"> 
           <h2 style="font-size: 28px; margin:0 0 20px 0;"> ACT Prep Courses </h2>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Sometimes practice on your own just doesn't cut it. Our ACT programs are designed to help you get the score you want to get into college or get that scholarship just out of reach.</p>
-          <p style="margin:0;font-size:16px;line-height:24px; "><a href="https://lyrnwithus.com/pricing?course='act" style="color:#27c03a;text-decoration:underline;">Learn more</a></p>
+          <p style="margin:0;font-size:16px;line-height:24px; "><a href="https://lyrnwithus.com/pricing?course=act" style="color:#27c03a;text-decoration:underline;">Learn more</a></p>
         </td>
         <td style="vertical-align: top;padding: 30px 30px 30px 60px;">
           <h2 style="font-size: 28px; margin:0 0 20px 0;">Subject Tutoring</h2>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Need some help with your homework or preparing for a test. Subject tutoring is your perfect fit. We teach all topics K-12 and one of our expert tutors will gladly help you get that A+!</p>
-          <p style="margin:0;font-size:16px;line-height:24px; "><a href="https://lyrnwithus.com/pricing?course='subjectTutoring" style="color:#27c03a;text-decoration:underline;">Learn more</a></p>
+          <p style="margin:0;font-size:16px;line-height:24px; "><a href="https://lyrnwithus.com/pricing?course=subjectTutoring" style="color:#27c03a;text-decoration:underline;">Learn more</a></p>
         </td>
       </tr>       
     </table>
@@ -83,10 +59,10 @@
     <table role="presentation" border="0" width="100%" cellspacing="0">
       <tr>
         <td class="footer" bgcolor="#F5F8FA" style="padding: 30px 30px;">
-          <a href="lyrnwithus.com/terms">Terms and Conditions</a>
-          <a href="lyrnwithus.com/privacy">Privacy Policy</a>
-          <a href="lyrnwithus.com/unsubscribe?q=${ref.id}"> Unsubscribe </a>
-          <p>Copyright © 2022 Advanced Education Solutions LLC. All rights reserved.</p>      
+          <a style="font-size: 12px; color: #99ACC2; margin-right: 1em;" href="lyrnwithus.com/terms">Terms and Conditions</a>
+          <a style="font-size: 12px; color: #99ACC2; margin-right: 1em;" href="lyrnwithus.com/privacy">Privacy Policy</a>
+          <a style="font-size: 12px; color: #99ACC2; margin-right: 1em;" href="lyrnwithus.com/unsubscribe?q=${ref.id}"> Unsubscribe </a>
+          <p style="font-size: 12px; color: #99ACC2;">Copyright © 2022 Advanced Education Solutions LLC. All rights reserved.</p>      
         </td>
       </tr>
     </table> 
