shorten act prep

--- a/public/pricing.html
+++ b/public/pricing.html
@@ -129,7 +129,7 @@
 
       <section class="course-section" id="act">
         <div class="heading">
-          <h1>ACT Prep Courses</h1>
+          <h1>ACT Prep</h1>
         </div>
 
         <div class="practice-test-wrapper">
