--- a/email-templates/practice-test.html
+++ b/email-templates/practice-test.html
@@ -20,8 +20,8 @@
           <h2 style="font-size: 28px; margin:0 0 20px 0;">ACT Practice Test</h2>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
             The best way to start preparing for the ACT is with a practice test. 
-            Knowing what your baseline score helps you set realistic goals. 
-            With our test taker you will be timed so it's like the real thing and when you're done you can review your score and answers all from the same place.
+            Knowing what your baseline score is will help you set realistic goals. 
+            With our test taker, you will be timed just like the actual test, and when you're done, you can review your score and answers all from the same place.
             What are you waiting for? Get testing!
           </p>
         </td> 
@@ -45,12 +45,12 @@
       <tr>
         <td style="vertical-align: top;padding: 30px 10px 30px 60px;"> 
           <h2 style="font-size: 28px; margin:0 0 20px 0;"> ACT Prep Courses </h2>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Sometimes practice on your own just doesn't cut it. Our ACT programs are designed to help you get the score you want to get into college or get that scholarship just out of reach.</p>
+          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Sometimes practice on your own just doesn't cut it. Our ACT programs are designed to help you get the score you need to get into college or get that scholarship.</p>
           <p style="margin:0;font-size:16px;line-height:24px; "><a href="https://lyrnwithus.com/pricing?course=act" style="color:#27c03a;text-decoration:underline;">Learn more</a></p>
         </td>
         <td style="vertical-align: top;padding: 30px 30px 30px 60px;">
           <h2 style="font-size: 28px; margin:0 0 20px 0;">Subject Tutoring</h2>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Need some help with your homework or preparing for a test. Subject tutoring is your perfect fit. We teach all topics K-12 and one of our expert tutors will gladly help you get that A+!</p>
+          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Need some help with your homework or preparing for a test? Subject tutoring is your perfect fit. We teach all topics K-12, and one of our expert tutors will gladly help you get that A+!</p>
           <p style="margin:0;font-size:16px;line-height:24px; "><a href="https://lyrnwithus.com/pricing?course=subjectTutoring" style="color:#27c03a;text-decoration:underline;">Learn more</a></p>
         </td>
       </tr>       
@@ -60,7 +60,7 @@
       <tr>
         <td bgcolor="#EAF0F6" align="center" style="padding: 30px 30px;">
           <h2 style="font-size: 28px; margin:0 0 20px 0;">We're here to help</h2>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Give us a call or text to learn more about any of our programs. We can't wait to start Lyrning with you!</p>
+          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Give us a call or text to learn more about our programs. We can't wait to start Lyrning with you!</p>
           <a href="tel:+13853000906" style="text-decoration: underline; font-weight: bold; color: #253342;">(385) 300-0906</a>
         </td>
       </tr>
