--- a/email-templates/promo.html
+++ b/email-templates/promo.html
@@ -35,12 +35,12 @@
       <tr>
         <td style="vertical-align: top;padding: 30px 10px 30px 60px;"> 
           <h2 style="font-size: 28px; margin:0 0 20px 0;"> ACT Prep Courses </h2>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Sometimes practice on your own just doesn't cut it. Our ACT programs are designed to help you get the score you want to get into college or get that scholarship just out of reach.</p>
+          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Sometimes practice on your own just doesn't cut it. Our ACT programs are designed to help you get the score you need to get into college or get that scholarship.</p>
           <p style="margin:0;font-size:16px;line-height:24px; "><a href="https://lyrnwithus.com/pricing?course=act" style="color:#27c03a;text-decoration:underline;">Learn more</a></p>
         </td>
         <td style="vertical-align: top;padding: 30px 30px 30px 60px;">
           <h2 style="font-size: 28px; margin:0 0 20px 0;">Subject Tutoring</h2>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Need some help with your homework or preparing for a test. Subject tutoring is your perfect fit. We teach all topics K-12 and one of our expert tutors will gladly help you get that A+!</p>
+          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Need some help with your homework or preparing for a test? Subject tutoring is your perfect fit. We teach all topics K-12, and one of our expert tutors will gladly help you get that A+!</p>
           <p style="margin:0;font-size:16px;line-height:24px; "><a href="https://lyrnwithus.com/pricing?course=subjectTutoring" style="color:#27c03a;text-decoration:underline;">Learn more</a></p>
         </td>
       </tr>       
@@ -50,7 +50,7 @@
       <tr>
         <td bgcolor="#EAF0F6" align="center" style="padding: 30px 30px;">
           <h2 style="font-size: 28px; margin:0 0 20px 0;">We're here to help</h2>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Give us a call or text to learn more about any of our programs. We can't wait to start Lyrning with you!</p>
+          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Give us a call or text to learn more about our programs. We can't wait to start Lyrning with you!</p>
           <a href="tel:+13853000906" style="text-decoration: underline; font-weight: bold; color: #253342;">(385) 300-0906</a>
         </td>
       </tr>
