--- a/public/pricing.html
+++ b/public/pricing.html
@@ -336,7 +336,7 @@
             <div class="length">
               <h4>Completely flexible</h4>
               <h5>Schedule anytime, for as long as you need</h5>
-              <p>30 minute minimum session length</p>
+              <p>30 minute increments</p>
             </div>
             <ul>
               <li>One-on-One Personalized Tutoring</li>
