--- a/public/team.html
+++ b/public/team.html
@@ -11,7 +11,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Who are the amazing people that are Lyrn?">
-    <title>Meet the Team</title>
+    <title>Our Team</title>
 
     <script>
       //this is so reCaptcha will trust local host
@@ -58,7 +58,7 @@
         <ul>
           <!-- <li><a href="index.html">Home</a></li> -->
           <li><a href="why.html">Why Lyrn</a></li>
-          <li><a href="#">Meet the Team</a></li>
+          <li><a href="#">Our Team</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <!-- <li><a href="sign-in.html">Sign In</a></li> -->
           <!-- <li><a class="enroll" href="enroll.html">Get Started</a></li> -->
@@ -265,7 +265,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="why.html">Why Lyrn</a></li>
-            <li><a href="#">Meet the Team</a></li>
+            <li><a href="#">Our Team</a></li>
             <li><a href="pricing.html">Pricing</a></li>
             <!-- <li><a href="enroll.html">Contact Us</a></li> -->
             <!-- <li><a href="sign-up.html">Sign up</a></li> -->
