--- a/public/index.html
+++ b/public/index.html
@@ -75,8 +75,9 @@
       <input type="checkbox" id="nav-toggle" class="nav-toggle">
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
+          <!-- <li><a href="#">Home</a></li> -->
           <li><a href="why.html">Why Lyrn</a></li>
+          <li><a href="team.html">Our Team</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <!-- <li><a href="sign-in.html">Sign In</a></li> -->
           <!-- <li><a class="enroll" href="enroll.html">Get Started</a></li> -->
@@ -377,8 +378,9 @@
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="why.html">Why Lyrn</a></li>
+            <li><a href="team.html">Our Team</a></li>
             <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="enroll.html">Contact Us</a></li>
+            <!-- <li><a href="enroll.html">Contact Us</a></li> -->
             <!-- <li><a href="sign-up.html">Sign up</a></li> -->
             <li><a href="sign-in.html">Log In</a></li>
             <li><a href="careers.html">Careers</a></li>
