--- a/public/why.html
+++ b/public/why.html
@@ -56,8 +56,9 @@
       <input type="checkbox" id="nav-toggle" class="nav-toggle">
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <!-- <li><a href="index.html">Home</a></li> -->
           <li><a href="#">Why Lyrn</a></li>
+          <li><a href="team.html">Our Team</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <!-- <li><a href="sign-in.html">Sign In</a></li> -->
           <!-- <li><a class="enroll" href="enroll.html">Get Started</a></li> -->
@@ -204,8 +205,9 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="#">Why Lyrn</a></li>
+            <li><a href="team.html">Our Team</a></li>
             <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="enroll.html">Contact Us</a></li>
+            <!-- <li><a href="enroll.html">Contact Us</a></li> -->
             <!-- <li><a href="sign-up.html">Sign up</a></li> -->
             <li><a href="sign-in.html">Log In</a></li>
             <li><a href="careers.html">Careers</a></li>
