--- a/public/why.html
+++ b/public/why.html
@@ -119,10 +119,11 @@
       <section class="content" id="content">
         <!-- <p class="date">December 13, 2021</p> -->
         <h2>Revolutionizing education</h2>
-        <p>After years of working in the tutoring industry at various companies and privately tutoring, we wanted to make something revolutionary. For as long as humans have
-          existed there has been one model to mastery: learn, practice, repeat. We're not changing that. It has worked for thouasands of years, so if it ain't broke, don't fix it. Instead
-          we're adding the special sauce that every modern company has used to bring their industry to next level - data. Google, Facebook, Amazon. Revolutionaries in their 
-          respective fields. How do we bring that same data to education?
+        <p>
+          After years of working in the tutoring industry at various companies and privately tutoring, we wanted to make something revolutionary. First we wanted
+          to truly break down what we are teaching. With years of experience, we have spent hundreds of hours pouring over our curriculum
+          to make sure it is the best in the world. But what truly separates us from the pack is that we are bringing education
+          into the 21st century. The way to do that is through data and we call it adaptive learning intelligence.
         </p>
         <p>
           <strong>Adaptive Learning Intelligence.</strong> We track every question your student answers in our programs; every test they take, every worksheet they complete,
@@ -144,15 +145,17 @@
           We focus on these three things:
         </p>
         <ul>
-          <li><strong>Tutors not robots</strong> - A PhD in astrophysics doesn't mean you can explain high school physics.</li>
+          <li><strong>World Class Tutors</strong> - Our tutors not only know their stuff but can teach effectively.</li>
           <li><strong>Transparency</strong> - Honesty from the very beginning.</li>
           <li><strong>Simplicity</strong> - Help ease some stress when you need it the most</li>
         </ul>
         <h2>Our amazing tutors</h2>
-        <p>Our top priority when hiring tutors is their ability to teach. This might sound obvious, but too often we see that the knowledge of the tutor is chosen over their ability 
+        <p>
+          Our top priority when hiring tutors is their ability to teach. This might sound obvious, but too often we see that the knowledge of the tutor is chosen over their ability 
           to teach that knowledge. Don't get me wrong, our tutors are completely prepared to answer any question and teach any concept to your students.
         </p>
-        <p>We choose to focus on the 
+        <p>
+          We choose to focus on the 
           relationship they build with students and how they can best help your student. Every student is unique and needs a unique approach to learning. This is exactly the need that 
           our tutors fill. Our advanced learning intelligence helps our tutors focus less on <strong>what</strong> to teach and more about <strong>how</strong> to teach. 
         </p>
