fixed image path

--- a/public/team.html
+++ b/public/team.html
@@ -110,7 +110,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="IMages/tutors/Andrew Tolton.jpg" alt="Avatar">
+              <img src="Images/tutors/Andrew Tolton.jpg" alt="Avatar">
             </div>
             <div class="flip-card-back">
               <h1>Andrew Tolton</h1> 
@@ -127,7 +127,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="IMages/tutors/Daniel Griffin.jpg" alt="Avatar">
+              <img src="Images/tutors/Daniel Griffin.jpg" alt="Avatar">
             </div>
             <div class="flip-card-back">
               <h1>Daniel Griffin</h1> 
@@ -146,7 +146,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="IMages/tutors/Erin Morgan.jpeg" alt="Avatar">
+              <img src="Images/tutors/Erin Morgan.jpeg" alt="Avatar">
             </div>
             <div class="flip-card-back">
               <h1>Erin Morgan</h1> 
@@ -159,7 +159,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="IMages/tutors/Mohamad Elgendy.jpg" alt="Avatar">
+              <img src="Images/tutors/Mohamad Elgendy.jpg" alt="Avatar">
             </div>
             <div class="flip-card-back">
               <h1>Mohamad Elgendy</h1> 
@@ -173,7 +173,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="IMages/tutors/Ocean Armstrong.jpg" alt="Avatar">
+              <img src="Images/tutors/Ocean Armstrong.jpg" alt="Avatar">
             </div>
             <div class="flip-card-back">
               <h1>Ocean Armstrong</h1> 
@@ -190,7 +190,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="IMages/tutors/Sam Nelson.jpeg" alt="Avatar">
+              <img src="Images/tutors/Sam Nelson.jpeg" alt="Avatar">
             </div>
             <div class="flip-card-back">
               <h1>Sam Nelson</h1> 
