--- a/public/team.html
+++ b/public/team.html
@@ -24,13 +24,14 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app-check.js" defer></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-functions.js" defer></script>
 
+    <script src="Site Templates/generalFunctions.js"></script>
     <script src="team.js" defer></script>
 
     <link href="team.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/ibd0auf.css">
   </head>
 
-  <body onload="bannerSetup()">
+  <body onload="initialSetup()">
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N393M5F"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -203,12 +204,27 @@
             </div>
           </div>
         </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="Images/tutors/Natalie White.jpg" alt="Avatar">
+            </div>
+            <div class="flip-card-back">
+              <h1>Natalie White</h1> 
+              <p>
+                Hi! I'm Natalie and I'm from Gilbert, Arizona. I'm currently studying mechanical engineering at BYU. 
+                My high school side hustle was teaching piano lessons, and I have loved teaching ever since then. 
+                When I'm not studying, you can often find me running, reading, thrifting, hiking, and going to concerts!
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
 
       <section class="content">
         <h2>The people behind the scenes</h2>
         <p>
-          Our tutors need all the support they can get. Thet's where these people come in. They are the people behind the curtain that makes sure your experience
+          Our tutors need all the support they can get. That's where these people come in. They are the people behind the curtain that make sure your experience
           with us is outstanding and that this whole company actually functions day to day.
         </p>
 
