--- a/public/team.html
+++ b/public/team.html
@@ -144,7 +144,7 @@
             </div>
           </div>
         </div>
-        <div class="flip-card">
+        <!-- <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img src="Images/tutors/Erin Morgan.jpeg" alt="Avatar">
@@ -156,7 +156,7 @@
                 I love exploring the outdoors here! When I am not studying or working, you can usually find me skiing, hiking, running, swimming, or traveling!</p>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
